@@ -3,6 +3,8 @@ Version 0.6-1 (2014-04-14)
 o Added ICU data
 o Added Toxaemia data - multivariate response contingency table (rev 209)
 o Added Vietnam data - 2 x 5 x 4 frequency table (rev 210)
+o Added logLik.loglm to allow use of AIC() and BIC() for loglm models (rev 212)
+o Fixed loddsratio.Rd to work with revised vcd::CoalMiners data  (rev 212)
 
 Version 0.6-0 (2014-03-07)
 
